--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-position: 0% 55%;
+  background-position: 0% 35%;
   background-image: url(/images/headline-background-mobile.png);
   background-repeat: no-repeat;
 }
@@ -47,13 +47,13 @@ nav {
   padding: 0;
 }
 
-.container-1 {
-  width: 100%;
-  height: 30px;
+.poppins {
+  font-family: Poppins, sans-serif;
 }
 
 .container-2 {
   font-family: Poppins, sans-serif;
+  margin-top: 24px;
   margin-left: 0;
   margin-right: 48px;
   display: flex;
@@ -63,7 +63,6 @@ nav {
 
 .headline {
   margin: 20px, 0, 20px, 0;
-  font-family: Poppins, sans-serif;
   color: #172b4d;
   width: 375px;
   display: flex;
@@ -71,7 +70,6 @@ nav {
 }
 
 .logo-txt {
-  font-family: Poppins, sans-serif;
   color: #6070ff;
   font-weight: bold;
   font-size: 18px;
@@ -108,16 +106,8 @@ nav {
     padding-right: 5px;
   }
 
-  .github {
-    padding-right: 5px;
-  }
-
   .m {
     width: 22px;
     height: 22px;
     margin-top: 2px;
   }
-
-.space1 {
-  width: 40%;
-}
