--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
     width: 100%;
     box-sizing: border-box;
     margin-right: 20px;
-    /* margin-bottom: 120px; */
+    margin-bottom: 120px;
   }
 
   ul {
@@ -448,6 +448,7 @@
   #name {
     font-size: 17px;
     margin-top: 10px;
+    width: 90%;
   }
 
   #name::placeholder {
@@ -461,6 +462,7 @@
     color: #172b4b;
     font-size: 17px;
     margin-top: 10px;
+    width: 90%;
   }
 
   #email::placeholder {
@@ -472,8 +474,38 @@
     color: #b3bac5;
     padding-left: 20px;
     font-size: 15px;
+    width: 90%;
   }
 
+  .btn {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #fff;
+    color: #6070ff;
+    border: solid 1px #6070ff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 35px 22px;
+  }
+
+  .btn:hover {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 35px 22px;
+  }
 
 }
 
