--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,21 @@
     margin-right: auto;
   }
 
+  .see-project:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px;
+    border-radius: 4px;
+    margin-left: 5%;
+    margin-right: auto;
+  }
+
   /* Section About Myself */
   .about_myself {
     margin: 20px, 0, 20px, 0;
@@ -301,6 +316,21 @@
     text-align: center;
     vertical-align: middle;
     background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px;
+    border-radius: 4px;
+    margin-left: 5%;
+    margin-right: auto;
+  }
+
+  .my-resume:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
     color: #fff;
     border: solid 1px #fff;
     padding: 12px;
@@ -396,10 +426,20 @@
 
   /* Contact form section */
   .footer {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     background-image: url(/images/blue-background.png);
-    background-size: cover;
-    height: 100%;
-    margin-bottom: 50px;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+    background-position: 0% 1.5%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .contact {
+    margin-bottom: 25px;
   }
 
   .heading2 {
@@ -409,17 +449,16 @@
     font-size: 40px;
     color: #fff;
     text-align: center;
-    padding-top: 30%;
+    padding-top: 29%;
   }
 
   .paragraph2 {
-    /* font-style: normal; */
     color: #fff;
-    padding: 10% 0 10% 0;
-    margin: 10px auto 25px auto;
+    padding: 4% 0 4% 0;
+    margin: 0 auto 7% auto;
     font-weight: 400;
     font-size: 20px;
-    width: 87%;
+    width: 88%;
     line-height: 28px;
     text-align: center;
   }
@@ -448,13 +487,13 @@
   #name {
     font-size: 17px;
     margin-top: 10px;
+    margin-left: 5px;
     width: 90%;
   }
 
   #name::placeholder {
     color: #172b4d;
-    /* margin-top: 20px; */
-    padding-left: 20px;
+    padding-left: 16px;
   }
 
   #email {
@@ -462,19 +501,25 @@
     color: #172b4b;
     font-size: 17px;
     margin-top: 10px;
+    margin-left: 5px;
     width: 90%;
   }
 
   #email::placeholder {
     color: #172b4b;
-    padding-left: 20px;
+    padding-left: 16px;
   }
 
   #message {
-    color: #b3bac5;
-    padding-left: 20px;
     font-size: 15px;
+    margin-top: 10px;
+    margin-left: 5px;
     width: 90%;
+  }
+
+  #message::placeholder {
+    color: #b3bac5;
+    padding-left: 16px;
   }
 
   .btn {
@@ -489,7 +534,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 35px 22px;
+    margin: 0 auto 10% 6%;
   }
 
   .btn:hover {
@@ -504,7 +549,22 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 35px 22px;
+    margin: 0 auto 10% 6%;
+  }
+
+  .btn:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 10% 6%;
   }
 
 }
@@ -754,6 +814,21 @@
     margin-right: auto;
   }
 
+  .see-project:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px;
+    border-radius: 4px;
+    margin-left: 5%;
+    margin-right: auto;
+  }
+
   /* Section About Myself */
   .about_myself {
     margin: 20px, 0, 20px, 0;
@@ -799,6 +874,21 @@
     text-align: center;
     vertical-align: middle;
     background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px;
+    border-radius: 4px;
+    margin-left: 5%;
+    margin-right: auto;
+  }
+
+  .my-resume:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
     color: #fff;
     border: solid 1px #fff;
     padding: 12px;
@@ -890,5 +980,148 @@
     width: 17%;
     height: auto;
     padding: 4px;
+  }
+
+  /* Contact form section */
+  .footer {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-image: url(/images/blue-background.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: auto;
+    background-position: 0% 1.5%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .contact {
+    margin-bottom: 25px;
+  }
+
+  .heading2 {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    padding-top: 29%;
+  }
+
+  .paragraph2 {
+    color: #fff;
+    padding: 4% 0 4% 0;
+    margin: 0 auto 7% auto;
+    font-weight: 400;
+    font-size: 20px;
+    width: 88%;
+    line-height: 28px;
+    text-align: center;
+  }
+
+  .box2 {
+    background-color: #fff;
+    border: solid 1px #cfd8dc;
+    border-radius: 8px;
+    width: 88%;
+    height: 50px;
+    color: #172b4d;
+    margin: 0 auto 18px auto;
+    vertical-align: middle;
+  }
+
+  .box3 {
+    background-color: #fff;
+    border: solid 1px #cfd8dc;
+    border-radius: 8px;
+    width: 88%;
+    height: 170px;
+    color: #b3bac5;
+    margin: 0 auto 18px auto;
+  }
+
+  #name {
+    font-size: 17px;
+    margin-top: 10px;
+    margin-left: 5px;
+    width: 90%;
+  }
+
+  #name::placeholder {
+    color: #172b4d;
+    padding-left: 16px;
+  }
+
+  #email {
+    vertical-align: middle;
+    color: #172b4b;
+    font-size: 17px;
+    margin-top: 10px;
+    margin-left: 5px;
+    width: 90%;
+  }
+
+#email::placeholder {
+  color: #172b4b;
+  padding-left: 16px;
+}
+
+  #message {
+    font-size: 15px;
+    margin-top: 10px;
+    margin-left: 5px;
+    width: 90%;
+  }
+
+  #message::placeholder {
+    color: #b3bac5;
+    padding-left: 16px;
+  }
+
+  .btn {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #fff;
+    color: #6070ff;
+    border: solid 1px #6070ff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 10% 6%;
+  }
+
+  .btn:hover {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #6070ff;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 10% 6%;
+  }
+
+  .btn:active {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #2230d2;
+    color: #fff;
+    border: solid 1px #fff;
+    padding: 12px 16px 12px 16px;
+    border-radius: 8px;
+    width: 132px;
+    margin: 0 auto 10% 6%;
   }
 }
