--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,10 @@
     grid-template-rows: 640px 700px 640px 700px;
   }
 
+  .grid-1b {
+    display: none;
+  }
+
   .work1 {
     background-color: #fff;
     border: solid 1px #dfe1e6;
@@ -566,23 +570,32 @@
 
 /* DESKTOP SIZE MEDIA QUERY (NOT YET ACCORDING TO FIGMA DESIGN) */
 @media only screen and (min-width: 768px) {
+  * {
+    margin: 0;
+    border: 0;
+    padding: 0;
+  }
+
   body {
-    background-position: 0% 1.5%;
+    background-image: url("../images/bg-header.png");
     background-size: 100%;
-    background-image: url(/images/headline-background-mobile.png);
+    background-position: 0% -0.8%;
     background-repeat: no-repeat;
   }
 
   h1 {
     font-size: 2.5rem;
     font-weight: bolder;
+    margin-bottom: 5px;
   }
 
   header {
     width: 100%;
+    height: 72px;
     box-sizing: border-box;
-    margin-left: 24px;
-    margin-bottom: 90px;
+    padding: 0 5% 0 5%;
+    /* margin-left: 24px;
+    margin-bottom: 90px; */
   }
 
   section {
@@ -594,6 +607,7 @@
 
   ul {
     list-style: none;
+    margin-bottom: 20px;
   }
 
   li {
@@ -602,6 +616,7 @@
 
   a {
     text-decoration: none;
+    vertical-align: middle;
   }
 
   nav {
@@ -610,8 +625,8 @@
   }
 
   hr {
-    width: 90%;
-    margin: 2px auto 2px auto;
+    width: 100%;
+    margin: 10px auto 8px auto;
     padding: 0;
     border-bottom: solid 1px #dfe1e6;
   }
@@ -620,57 +635,103 @@
     font-family: Poppins, sans-serif;
   }
 
+  /* Toolbar */
   .container-2 {
-    font-family: Poppins, sans-serif;
+    display: none;
+    /* font-family: Poppins, sans-serif;
     margin-top: 24px;
     margin-left: 0;
     margin-right: 48px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between; */
   }
 
-  /* Section Headline */
-  .headline {
-    margin: 20px, 0, 20px, 0;
-    color: #172b4d;
-    width: 100%;
+  .toolbar {
+    padding-top: 16px;
+    position: fixed;
+    background-color: #fff;
+  }
+
+  .nav-menu {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+  }
+
+  .nav-menu-text {
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 20px;
+    color: #344563;
+  }
+
+  .container-5 {
+    margin: 0 auto 0 auto;
+    padding: 0% 8% 0% 8%;
+    display: flex;
+    justify-content: space-between;
   }
 
   .logo-txt {
     color: #6070ff;
     font-weight: bold;
     font-size: 18px;
+    height: 24px;
+    padding-top: 5px;
+  }
+
+  /* Section Headline */
+  .headline {
+    padding: 150px 18% 0 18%;
+    /* margin: 20px, 0, 20px, 0; */
+    color: #172b4d;
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
   }
 
   .name {
-    width: 85%;
+    color: #172b4d;
+    padding-top: 75px;
+    font-size: 48px;
+    line-height: 60px;
+    font-weight: 700;
+    /* width: 85%;
     margin-top: 20px;
-    margin-left: 24px;
+    margin-left: 24px; */
   }
 
   .desc {
-    margin-top: 14px;
-    margin-left: 24px;
+    /* margin-top: 14px;
+    margin-left: 24px; */
+    font-size: 20px;
     font-weight: 400;
-    width: 85%;
-    line-height: 1.5;
-    text-align: justify;
+    color: #344563;
+    line-height: 28px;
+    padding-bottom: 20px;
+    /* width: 85%; */
+    /* line-height: 1.5;
+    text-align: justify; */
   }
 
   .connect {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 24px;
+    width: 200px;
+    margin-bottom: 8px;
+    /* margin-top: 20px; */
+    /* margin-bottom: 10px; */
+    /* margin-left: 24px; */
     color: #7f8cff;
-    font-weight: 400;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   .container-3 {
-    margin-left: 24px;
+    /* margin-left: 24px; */
     display: flex;
+    margin-bottom: 200px;
   }
 
   .linkedin,
@@ -690,15 +751,26 @@
   /* Section Works */
   .works {
     width: 100%;
+    margin: 50px 0 50px 0;
   }
 
   .grid-1 {
-    width: 90%;
+    display: none;
+    /* width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 640px 700px 640px 700px;
+    grid-template-rows: 640px 700px 640px 700px; */
+  }
+
+  .grid-1b {
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 
   .work1 {
