--- a/css/styles.css
+++ b/css/styles.css
@@ -660,22 +660,50 @@
   }
 
   .container-2 {
-    font-family: Poppins, sans-serif;
-    margin-top: 24px;
-    margin-left: 0;
-    margin-right: 48px;
+    display: none;
+  }
+
+  .toolbar {
+    padding-top: 16px;
+    position: fixed;
+    background-color: #fff;
+  }
+
+  .nav-menu {
     display: flex;
     align-items: center;
+    padding-top: 10px;
+  }
+
+  .nav-menu-text {
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 20px;
+    color: #344563;
+  }
+
+  .container-5 {
+    margin: 0 auto 0 auto;
+    padding: 0% 8% 0% 8%;
+    display: flex;
     justify-content: space-between;
+  }
+
+  .logo-txt {
+    color: #6070ff;
+    font-weight: bold;
+    font-size: 18px;
+    height: 24px;
+    padding-top: 5px;
   }
 
   /* Section Headline */
   .headline {
-    margin: 20px, 0, 20px, 0;
+    padding: 150px, 18%, 0px, 18%;
     color: #172b4d;
-    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: start;
   }
 
   .rotate {
@@ -695,16 +723,12 @@
     }
   }
 
-  .logo-txt {
-    color: #6070ff;
-    font-weight: bold;
-    font-size: 18px;
-  }
-
   .name {
-    width: 85%;
-    margin-top: 20px;
-    margin-left: 24px;
+    color: #172b4d;
+    padding-top: 75px;
+    font-size: 48px;
+    line-height: 60px;
+    font-weight: 700;
   }
 
   #delay {
@@ -719,25 +743,25 @@
   }
 
   .desc {
-    margin-top: 14px;
-    margin-left: 24px;
+    font-size: 20px;
     font-weight: 400;
-    width: 85%;
-    line-height: 1.5;
-    text-align: justify;
+    color: #344563;
+    line-height: 28px;
+    padding-bottom: 20px;
   }
 
   .connect {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 24px;
+    width: 200px;
+    margin-bottom: 8px;
     color: #7f8cff;
-    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
   }
 
   .container-3 {
-    margin-left: 24px;
     display: flex;
+    margin-bottom: 200px;
   }
 
   .linkedin,
@@ -930,24 +954,37 @@
 
   /* Section About Myself */
   .about_myself {
-    margin: 20px, 0, 20px, 0;
+    width: 80%;
+    margin-bottom: 120px;
     color: #172b4d;
     display: flex;
-    flex-direction: column;
+    padding: 0% 10% 0% 10%;
+  }
+
+  .first {
+    width: 40%;
+    padding-right: 15px;
   }
 
   .about {
-    width: 90%;
-    color: #172b4d;
+    width: 100%;
+    color: #091e42;
     font-size: 40px;
     font-weight: 700;
     line-height: 52px;
-    margin-left: 24px;
+  }
+
+  .desc4 {
+    width: 95%;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #344563;
+    margin-bottom: 28px;
   }
 
   .container-4 {
     display: flex;
-    margin: 0 20px 20px 24px;
   }
 
   .my-resume {
@@ -961,9 +998,6 @@
     border: solid 1px #396df2;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
-    margin-bottom: 15px;
   }
 
   .my-resume:hover {
@@ -977,8 +1011,6 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
   }
 
   .my-resume:active {
@@ -992,8 +1024,13 @@
     border: solid 1px #fff;
     padding: 12px;
     border-radius: 4px;
-    margin-left: 5%;
-    margin-right: auto;
+  }
+
+  .second {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 15px;
   }
 
   .languages {
