--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,16 @@
     margin-left: 24px;
   }
 
+  .desc4 {
+    width: 95%;
+    margin-left: 24px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #344563;
+    margin-bottom: 28px;
+  }
+
   .container-4 {
     display: flex;
     margin: 0 20px 20px 24px;
@@ -461,28 +471,45 @@
   }
 
   /* Contact form section */
-  .footer {
+  #foot {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-image: url(/images/blue-background.png);
+    background: url("/images/blue-background.png");
+    background-size: cover;
+    background-position: right 100% top 0%;
     background-repeat: no-repeat;
     width: 100%;
-    height: auto;
-    background-position: 0% 1.5%;
-    background-size: 100%;
-    margin-bottom: 25px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
-  .heading2 {
-    font-family: "Poppins", sans-serif;
+  #contact-form {
+    box-sizing: border-box;
+    width: 90%;
+    margin: 0% auto 0% auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #contactf {
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
     color: #fff;
     text-align: center;
-    padding-top: 29%;
+    padding-top: 33%;
   }
+
+  /* #contactf {
+    margin: 115px auto 8px auto;
+    font-size: 40px;
+    line-height: 52px;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    width: 87%;
+    height: 54px;
+  } */
 
   .paragraph2 {
     color: #fff;
@@ -497,6 +524,48 @@
 
   .paragraph2:hover {
     transform: translate(16px, 0);
+  }
+
+  .form1 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #desc3 {
+    margin: 10px auto 18px auto;
+    font-weight: 400;
+    font-size: 20px;
+    width: 87%;
+    color: #ebebff;
+    line-height: 28px;
+    text-align: center;
+  }
+
+  #names {
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 20px;
+    color: #172b4d;
+    margin: 15px 38px 15px 16px;
+    width: 90%;
+  }
+
+  #email {
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 20px;
+    color: #172b4d;
+    margin: 15px 38px 15px 16px;
+    width: 90%;
+  }
+
+  #textarea {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #959ba3;
+    margin: 12px 16px 24px 16px;
+    width: 90%;
   }
 
   .box2 {
@@ -520,45 +589,7 @@
     margin: 0 auto 18px auto;
   }
 
-  #name {
-    font-size: 17px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #name::placeholder {
-    color: #172b4d;
-    padding-left: 16px;
-  }
-
-  #email {
-    vertical-align: middle;
-    color: #172b4b;
-    font-size: 17px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #email::placeholder {
-    color: #172b4b;
-    padding-left: 16px;
-  }
-
-  #message {
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 5px;
-    width: 90%;
-  }
-
-  #message::placeholder {
-    color: #b3bac5;
-    padding-left: 16px;
-  }
-
-  .btn {
+  .button3 {
     font-size: 17px;
     line-height: 24px;
     font-weight: 500;
@@ -570,10 +601,10 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 10% 6%;
+    margin: 0 0 10% 5%;
   }
 
-  .btn:hover {
+  .button3:hover {
     font-size: 17px;
     line-height: 24px;
     font-weight: 500;
@@ -585,10 +616,10 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 10% 6%;
+    margin: 0 0 10% 5%;
   }
 
-  .btn:active {
+  .button3:active {
     font-size: 17px;
     line-height: 24px;
     font-weight: 500;
@@ -600,7 +631,19 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 10% 6%;
+    margin: 0 0 10% 5%;
+  }
+
+  #names::placeholder {
+    color: #172b4d;
+  }
+
+  #email::placeholder {
+    color: #172b4b;
+  }
+
+  #message::placeholder {
+    color: #b3bac5;
   }
 
   .grow {
@@ -1122,7 +1165,7 @@
   }
 
   #desc3 {
-    margin: 10px auto 18px auto;
+    margin: 10px auto 28px auto;
     font-weight: 400;
     font-size: 20px;
     width: 87%;
@@ -1175,7 +1218,7 @@
     width: 88%;
     height: 170px;
     color: #b3bac5;
-    margin: 0 auto 18px auto;
+    margin: 0 auto 30px auto;
   }
 
   .button3 {
@@ -1190,7 +1233,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 45px auto;
+    margin: 0, auto, 45px, auto;
   }
 
   .button3:hover {
@@ -1205,7 +1248,7 @@
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
     width: 132px;
-    margin: 0 auto 45px auto;
+    margin: 0, auto, 45px, auto;
   }
 }
 
